tests/baselines/reference/genericArray0.errors.txt
genericArray0.ts(4,9): error TS2454: Variable 'x' is used before being assigned.


==== genericArray0.ts (1 errors) ====
    var x:number[];
    
    
    var y = x; 
            ~
!!! error TS2454: Variable 'x' is used before being assigned.
    
    function map<U>() {
        var ys: U[] = [];
    }
    